--- a/ColorBallTest/app/src/main/res/layout/activity_main.xml
+++ b/ColorBallTest/app/src/main/res/layout/activity_main.xml
@@ -16,20 +16,18 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
-        <TextView
-            android:id="@+id/txtTime"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:orientation="horizontal">
-            <TextView
-                android:id="@+id/txtColor"
+            <Button
+                android:id="@+id/btColorAdd"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:background="@color/colorPrimaryDark" />
+                android:background="@color/colorPrimaryDark"
+                android:text="+"
+                android:textSize="45pt"
+                android:textAlignment="center"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -42,7 +40,7 @@
                     <TextView
                         android:id="@+id/txtRed"
                         android:layout_width="wrap_content"
-                        android:layout_height="40dp"
+                        android:layout_height="30dp"
                         android:text="0"/>
                     <SeekBar
                         android:id="@+id/skRed"
@@ -58,7 +56,7 @@
                     <TextView
                         android:id="@+id/txtGreen"
                         android:layout_width="wrap_content"
-                        android:layout_height="40dp"
+                        android:layout_height="30dp"
                         android:text="0"/>
                     <SeekBar
                         android:id="@+id/skGreen"
@@ -74,7 +72,7 @@
                     <TextView
                         android:id="@+id/txtBlue"
                         android:layout_width="wrap_content"
-                        android:layout_height="40dp"
+                        android:layout_height="30dp"
                         android:text="0"/>
                     <SeekBar
                         android:id="@+id/skBlue"
@@ -83,9 +81,34 @@
                         android:max="255"/>
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/txtSpeed"
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:text="V"/>
+                    <SeekBar
+                        android:id="@+id/skSpeed"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:max="200"/>
+                </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+        <com.zgh.android.colorballtest.BallView
+            android:id="@+id/ballView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
